feat: data for visits
